--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.19",
+    "@mui/x-data-grid": "^6.18.3",
     "amazon-cognito-identity-js": "^6.3.7",
     "axios": "^1.6.2",
     "react": "^18.2.0",
@@ -13,6 +14,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0",
     "react-scripts": "^5.0.1",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
