--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@mui/x-data-grid": "^6.18.3",
     "amazon-cognito-identity-js": "^6.3.7",
     "axios": "^1.6.2",
+    "chart.js": "^4.4.1",
     "date-fns": "^2.30.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0",
